[gd_scene load_steps=26 format=3 uid="uid://bu6qub506i5vu"]

[ext_resource type="Script" path="res://Classes/BetDisplay/BetDisplaySimple.gd" id="1_76y5o"]
[ext_resource type="PackedScene" uid="uid://ds2hj3wae03ip" path="res://Classes/BetDisplay/ChipPile.tscn" id="2_t13lr"]
[ext_resource type="PackedScene" uid="uid://tsvuh3p747t8" path="res://Classes/BetDisplay/PileSelector.tscn" id="3_clxdh"]
[ext_resource type="Script" path="res://Classes/BetDisplay/DisplayWheel.gd" id="3_gj3qo"]
[ext_resource type="FontFile" uid="uid://dfomoacntffo" path="res://Assets/alagard.ttf" id="4_6lq8r"]
[ext_resource type="PackedScene" uid="uid://bvgyufidhkxmj" path="res://Classes/BetDisplay/TragaMonedas.glb" id="4_vcxxi"]
[ext_resource type="Texture2D" uid="uid://cvlwu2egkwdaa" path="res://Classes/BetDisplay/TablaApuestasSimples_BordeColorApuestas.png" id="5_bmeg7"]
[ext_resource type="PackedScene" uid="uid://phhlbau5wrbq" path="res://Classes/SlotWheel/SlotWheel.tscn" id="5_rxriy"]
[ext_resource type="Shader" path="res://Classes/BetDisplay/SlotScreen.gdshader" id="6_dipb8"]
[ext_resource type="Texture2D" uid="uid://carq68a3vomod" path="res://Classes/BetDisplay/TablaApuestasSimples_BordeTexturaApuestas.png" id="6_jhnol"]
[ext_resource type="Texture2D" uid="uid://bm8k0hgo7w4o6" path="res://Assets/IcoFran.png" id="7_ctrvp"]
[ext_resource type="Texture2D" uid="uid://b6e4jth4nfnmb" path="res://Classes/BetDisplay/TablaApuestasSimples_BordeColor2.png" id="7_uas0t"]
[ext_resource type="Texture2D" uid="uid://cre3n31pdweli" path="res://Classes/BetDisplay/TablaApuestasSimples_BordeTextura2.png" id="8_d242t"]
[ext_resource type="Texture2D" uid="uid://cystl7jj4igwe" path="res://Classes/BetDisplay/TablaApuestasSimples_ColorTablasSimple.png" id="9_k1crs"]
[ext_resource type="Texture2D" uid="uid://b8yokpq1w1whl" path="res://Classes/BetDisplay/TablaApuestasSimples_TexturaTablasSimple.png" id="10_755rp"]
[ext_resource type="PackedScene" uid="uid://ce83diidesaw6" path="res://Classes/BetDisplay/BetScreen.tscn" id="10_xm5ya"]
[ext_resource type="Script" path="res://Classes/BetDisplay/AIBetController.gd" id="13_o215p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ttvtf"]
render_priority = 1
shader = ExtResource("6_dipb8")
shader_parameter/size = 4.0
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/ratio = Vector2(16, 9)
shader_parameter/screenTexture = ExtResource("7_ctrvp")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3k3t7"]
resource_name = "DetalleBordeApuestas"
cull_mode = 2
albedo_texture = ExtResource("5_bmeg7")
normal_enabled = true
normal_scale = 0.8
normal_texture = ExtResource("6_jhnol")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8tpd8"]
resource_name = "BordeApuestasReal"
cull_mode = 2
albedo_texture = ExtResource("7_uas0t")
roughness = 0.672727
normal_enabled = true
normal_texture = ExtResource("8_d242t")

[sub_resource type="ArrayMesh" id="ArrayMesh_k8fgy"]
_surfaces = [{
"aabb": AABB(-0.0715874, 1, -1, 9.99868e-06, 0.470335, 2.00001),
"format": 34896613377,
"index_count": 6,
"index_data": PackedByteArray(1, 0, 2, 0, 0, 0, 1, 0, 3, 0, 2, 0),
"name": "DetalleBordeApuestas",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 254, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0)
}, {
"aabb": AABB(-0.110719, -1, -1, 0.0797531, 3.14988, 2),
"format": 34896613377,
"index_count": 90,
"index_data": PackedByteArray(0, 0, 5, 0, 2, 0, 0, 0, 4, 0, 5, 0, 6, 0, 1, 0, 7, 0, 6, 0, 3, 0, 1, 0, 2, 0, 3, 0, 0, 0, 2, 0, 1, 0, 3, 0, 5, 0, 6, 0, 7, 0, 5, 0, 4, 0, 6, 0, 0, 0, 6, 0, 4, 0, 0, 0, 3, 0, 6, 0, 10, 0, 13, 0, 9, 0, 10, 0, 14, 0, 13, 0, 7, 0, 20, 0, 5, 0, 7, 0, 21, 0, 20, 0, 14, 0, 12, 0, 13, 0, 14, 0, 15, 0, 12, 0, 9, 0, 12, 0, 8, 0, 9, 0, 13, 0, 12, 0, 8, 0, 15, 0, 11, 0, 8, 0, 12, 0, 15, 0, 11, 0, 14, 0, 10, 0, 11, 0, 15, 0, 14, 0, 8, 0, 19, 0, 9, 0, 8, 0, 18, 0, 19, 0, 2, 0, 16, 0, 1, 0, 2, 0, 17, 0, 16, 0, 21, 0, 22, 0, 20, 0, 21, 0, 23, 0, 22, 0, 10, 0, 23, 0, 11, 0, 10, 0, 22, 0, 23, 0),
"name": "BordeApuestasReal",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 139, 162, 255, 255, 0, 0, 0, 0, 139, 162, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 139, 162, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 255, 139, 162, 255, 255, 0, 0, 0, 0, 196, 200, 255, 255, 0, 0, 0, 0, 196, 200, 0, 0, 0, 0, 255, 255, 196, 200, 0, 0, 0, 0, 255, 255, 196, 200, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 155, 125, 139, 162, 255, 255, 0, 0, 155, 125, 139, 162, 0, 0, 0, 0, 155, 125, 196, 200, 255, 255, 0, 0, 155, 125, 196, 200, 0, 0, 0, 0, 248, 131, 139, 162, 0, 0, 0, 0, 248, 131, 139, 162, 255, 255, 0, 0, 248, 131, 196, 200, 0, 0, 0, 0, 248, 131, 196, 200, 255, 255, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_4x4fq"]
resource_name = "TablaApuestasSimples_Cube_010"
_surfaces = [{
"aabb": AABB(-0.0715874, 1, -1, 9.99868e-06, 0.470335, 2.00001),
"attribute_data": PackedByteArray(75, 184, 210, 195, 75, 184, 56, 251, 68, 171, 210, 195, 68, 171, 56, 251),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray(1, 0, 2, 0, 0, 0, 1, 0, 3, 0, 2, 0),
"material": SubResource("StandardMaterial3D_3k3t7"),
"name": "DetalleBordeApuestas",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 84, 213, 0, 0, 0, 0, 0, 0, 84, 213, 0, 0, 255, 255, 254, 255, 84, 213, 0, 0, 255, 255, 0, 0, 84, 213, 84, 85, 170, 170, 85, 85, 170, 170, 84, 85, 170, 170, 85, 85, 170, 170)
}, {
"aabb": AABB(-0.110719, -1, -1, 0.0797531, 3.14988, 2),
"attribute_data": PackedByteArray(207, 124, 47, 131, 2, 171, 47, 3, 148, 226, 47, 131, 47, 3, 207, 252, 167, 242, 207, 252, 27, 190, 207, 124, 207, 124, 207, 252, 148, 226, 207, 252, 27, 190, 47, 3, 47, 3, 47, 131, 2, 171, 207, 124, 167, 242, 47, 131, 40, 166, 47, 3, 110, 231, 47, 131, 47, 3, 47, 3, 110, 231, 207, 252, 53, 201, 47, 3, 47, 3, 207, 124, 40, 166, 207, 124, 205, 237, 47, 131, 207, 124, 47, 3, 205, 237, 207, 252, 53, 201, 207, 124, 207, 124, 207, 124, 130, 172, 47, 131, 104, 251, 207, 252, 39, 221, 201, 35, 130, 172, 207, 252, 104, 251, 47, 131, 77, 216, 124, 83, 148, 207, 47, 3, 39, 221, 124, 83, 53, 220, 47, 131, 148, 207, 207, 124, 77, 216, 201, 35, 53, 220, 207, 252, 47, 131, 47, 131, 39, 221, 29, 77, 225, 178, 207, 124, 47, 131, 207, 252, 77, 216, 207, 124, 225, 178, 47, 3, 39, 221, 207, 124, 187, 183, 47, 3, 225, 178, 47, 131, 77, 216, 29, 77, 187, 183, 207, 124, 225, 178, 207, 252, 124, 192, 207, 124, 124, 192, 47, 3, 6, 249, 207, 252, 6, 249, 47, 131, 219, 198, 47, 3, 201, 159, 47, 3, 219, 198, 207, 124, 201, 159, 207, 124, 238, 209, 47, 3, 47, 131, 47, 3, 238, 209, 207, 124, 47, 131, 207, 124),
"format": 34896613399,
"index_count": 90,
"index_data": PackedByteArray(2, 0, 15, 0, 7, 0, 2, 0, 13, 0, 15, 0, 19, 0, 4, 0, 21, 0, 19, 0, 11, 0, 4, 0, 6, 0, 9, 0, 0, 0, 6, 0, 3, 0, 9, 0, 17, 0, 20, 0, 23, 0, 17, 0, 14, 0, 20, 0, 1, 0, 18, 0, 12, 0, 1, 0, 10, 0, 18, 0, 31, 0, 40, 0, 29, 0, 31, 0, 42, 0, 40, 0, 22, 0, 52, 0, 16, 0, 22, 0, 54, 0, 52, 0, 43, 0, 38, 0, 41, 0, 43, 0, 46, 0, 38, 0, 27, 0, 36, 0, 24, 0, 27, 0, 39, 0, 36, 0, 26, 0, 45, 0, 34, 0, 26, 0, 37, 0, 45, 0, 35, 0, 44, 0, 32, 0, 35, 0, 47, 0, 44, 0, 25, 0, 51, 0, 28, 0, 25, 0, 50, 0, 51, 0, 8, 0, 48, 0, 5, 0, 8, 0, 49, 0, 48, 0, 55, 0, 57, 0, 53, 0, 55, 0, 59, 0, 57, 0, 30, 0, 58, 0, 33, 0, 30, 0, 56, 0, 58, 0),
"material": SubResource("StandardMaterial3D_8tpd8"),
"name": "BordeApuestasReal",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 60,
"vertex_data": PackedByteArray(0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 139, 162, 255, 255, 255, 255, 0, 0, 139, 162, 255, 255, 255, 255, 0, 0, 139, 162, 255, 255, 255, 191, 0, 0, 139, 162, 0, 0, 255, 255, 0, 0, 139, 162, 0, 0, 255, 255, 0, 0, 139, 162, 0, 0, 255, 191, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 139, 162, 0, 0, 255, 255, 255, 255, 139, 162, 0, 0, 255, 191, 255, 255, 139, 162, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 139, 162, 255, 255, 255, 255, 255, 255, 139, 162, 255, 255, 255, 191, 255, 255, 139, 162, 255, 255, 255, 255, 0, 0, 196, 200, 255, 255, 84, 213, 0, 0, 196, 200, 255, 255, 255, 255, 0, 0, 196, 200, 255, 255, 255, 255, 0, 0, 196, 200, 0, 0, 84, 213, 0, 0, 196, 200, 0, 0, 255, 255, 0, 0, 196, 200, 0, 0, 255, 255, 255, 255, 196, 200, 0, 0, 255, 255, 255, 255, 196, 200, 0, 0, 255, 255, 255, 255, 196, 200, 0, 0, 84, 213, 255, 255, 196, 200, 255, 255, 255, 255, 255, 255, 196, 200, 255, 255, 255, 255, 255, 255, 196, 200, 255, 255, 84, 213, 0, 0, 255, 255, 255, 255, 84, 213, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 191, 0, 0, 255, 255, 0, 0, 84, 213, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 84, 213, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 84, 213, 155, 125, 139, 162, 255, 255, 255, 191, 155, 125, 139, 162, 0, 0, 255, 191, 155, 125, 196, 200, 255, 255, 255, 255, 155, 125, 196, 200, 0, 0, 255, 255, 248, 131, 139, 162, 0, 0, 255, 191, 248, 131, 139, 162, 0, 0, 84, 213, 248, 131, 139, 162, 255, 255, 255, 191, 248, 131, 139, 162, 255, 255, 84, 213, 248, 131, 196, 200, 0, 0, 255, 255, 248, 131, 196, 200, 0, 0, 84, 213, 248, 131, 196, 200, 255, 255, 255, 255, 248, 131, 196, 200, 255, 255, 84, 213, 255, 63, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 255, 63, 255, 127, 255, 127, 255, 127, 255, 255, 255, 127, 255, 63, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 63, 255, 127, 255, 127, 255, 63, 255, 127, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 127, 255, 63, 255, 127, 255, 127, 255, 191, 255, 127, 255, 127, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 84, 85, 170, 170, 255, 127, 255, 63, 255, 127, 255, 127, 85, 85, 170, 170, 255, 127, 255, 63, 255, 255, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 170, 170, 84, 85, 255, 127, 255, 63, 255, 127, 255, 127, 170, 170, 84, 85, 84, 85, 170, 170, 255, 127, 255, 127, 255, 255, 255, 127, 85, 85, 170, 170, 255, 255, 255, 127, 254, 255, 255, 127, 255, 255, 255, 127, 254, 255, 255, 127, 170, 170, 84, 85, 255, 127, 255, 127, 255, 255, 255, 127, 170, 170, 84, 85, 255, 255, 255, 127, 255, 255, 255, 127, 255, 127, 255, 63, 255, 127, 255, 63, 255, 255, 255, 127, 170, 170, 84, 85, 255, 255, 255, 127, 170, 170, 84, 85, 255, 127, 255, 63, 170, 170, 84, 85, 255, 127, 255, 63, 170, 170, 84, 85)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_k8fgy")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_khh4o"]
resource_name = "Color_TablaApuestasSimples"
cull_mode = 2
albedo_texture = ExtResource("9_k1crs")
roughness = 0.5
normal_enabled = true
normal_texture = ExtResource("10_755rp")

[sub_resource type="ArrayMesh" id="ArrayMesh_cgtsm"]
_surfaces = [{
"aabb": AABB(-0.469121, -1, -1, 0.938253, 2, 2.00001),
"format": 34896613377,
"index_count": 144,
"index_data": PackedByteArray(8, 0, 17, 0, 1, 0, 8, 0, 20, 0, 17, 0, 27, 0, 11, 0, 12, 0, 27, 0, 29, 0, 11, 0, 19, 0, 8, 0, 30, 0, 19, 0, 20, 0, 8, 0, 15, 0, 13, 0, 18, 0, 15, 0, 2, 0, 13, 0, 3, 0, 28, 0, 7, 0, 3, 0, 23, 0, 28, 0, 13, 0, 21, 0, 18, 0, 13, 0, 10, 0, 21, 0, 9, 0, 28, 0, 26, 0, 9, 0, 7, 0, 28, 0, 5, 0, 23, 0, 3, 0, 5, 0, 25, 0, 23, 0, 22, 0, 11, 0, 29, 0, 22, 0, 6, 0, 11, 0, 31, 0, 19, 0, 30, 0, 31, 0, 14, 0, 19, 0, 21, 0, 0, 0, 16, 0, 21, 0, 10, 0, 0, 0, 14, 0, 1, 0, 17, 0, 14, 0, 31, 0, 1, 0, 9, 0, 25, 0, 5, 0, 9, 0, 26, 0, 25, 0, 24, 0, 6, 0, 22, 0, 24, 0, 4, 0, 6, 0, 27, 0, 4, 0, 24, 0, 27, 0, 12, 0, 4, 0, 21, 0, 15, 0, 18, 0, 21, 0, 16, 0, 15, 0, 29, 0, 24, 0, 22, 0, 29, 0, 27, 0, 24, 0, 2, 0, 16, 0, 0, 0, 2, 0, 15, 0, 16, 0, 23, 0, 26, 0, 28, 0, 23, 0, 25, 0, 26, 0, 19, 0, 17, 0, 20, 0, 19, 0, 14, 0, 17, 0, 2, 0, 10, 0, 13, 0, 2, 0, 0, 0, 10, 0, 6, 0, 12, 0, 11, 0, 6, 0, 4, 0, 12, 0, 5, 0, 7, 0, 9, 0, 5, 0, 3, 0, 7, 0, 1, 0, 30, 0, 8, 0, 1, 0, 31, 0, 30, 0),
"name": "Color_TablaApuestasSimples",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 32,
"vertex_data": PackedByteArray(254, 255, 0, 0, 254, 255, 0, 0, 254, 255, 0, 0, 0, 0, 0, 0, 254, 255, 255, 255, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 254, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 254, 255, 0, 0, 140, 119, 0, 0, 0, 0, 0, 0, 114, 136, 0, 0, 0, 0, 0, 0, 140, 119, 255, 255, 0, 0, 0, 0, 114, 136, 0, 0, 254, 255, 0, 0, 140, 119, 0, 0, 254, 255, 0, 0, 140, 119, 255, 255, 254, 255, 0, 0, 114, 136, 255, 255, 254, 255, 0, 0, 254, 255, 255, 255, 64, 112, 0, 0, 254, 255, 255, 255, 190, 143, 0, 0, 254, 255, 0, 0, 190, 143, 0, 0, 254, 255, 0, 0, 64, 112, 0, 0, 114, 136, 255, 255, 190, 143, 0, 0, 114, 136, 255, 255, 64, 112, 0, 0, 114, 136, 0, 0, 64, 112, 0, 0, 114, 136, 0, 0, 190, 143, 0, 0, 0, 0, 0, 0, 190, 143, 0, 0, 0, 0, 0, 0, 64, 112, 0, 0, 0, 0, 255, 255, 190, 143, 0, 0, 0, 0, 255, 255, 64, 112, 0, 0, 140, 119, 255, 255, 64, 112, 0, 0, 140, 119, 255, 255, 190, 143, 0, 0, 140, 119, 0, 0, 64, 112, 0, 0, 140, 119, 0, 0, 190, 143, 0, 0, 114, 136, 255, 255, 0, 0, 0, 0, 254, 255, 255, 255, 0, 0, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_f05kf"]
resource_name = "TablaApuestasSimples_Cube_013"
_surfaces = [{
"aabb": AABB(-0.469121, -1, -1, 0.938253, 2, 2.00001),
"attribute_data": PackedByteArray(117, 183, 236, 80, 9, 225, 18, 175, 16, 165, 189, 89, 144, 55, 95, 47, 191, 46, 104, 4, 198, 46, 189, 89, 9, 225, 150, 251, 232, 97, 236, 80, 16, 165, 65, 166, 245, 37, 189, 89, 124, 123, 95, 47, 104, 4, 104, 4, 36, 89, 65, 166, 204, 241, 65, 166, 144, 55, 142, 38, 245, 37, 65, 166, 104, 4, 236, 80, 9, 209, 95, 47, 36, 89, 189, 89, 16, 149, 236, 80, 204, 241, 189, 89, 185, 106, 95, 47, 43, 21, 104, 4, 130, 131, 18, 175, 83, 80, 18, 175, 84, 72, 95, 47, 252, 29, 104, 4, 43, 21, 236, 80, 205, 225, 95, 47, 130, 131, 150, 251, 36, 89, 18, 175, 56, 200, 236, 80, 204, 241, 18, 175, 77, 132, 236, 80, 9, 225, 189, 89, 245, 37, 18, 175, 9, 225, 65, 166, 84, 72, 142, 38, 245, 37, 150, 251, 36, 89, 150, 251, 204, 241, 150, 251, 36, 81, 236, 80, 117, 199, 65, 166, 164, 174, 236, 80, 83, 80, 65, 166, 164, 190, 150, 251, 232, 97, 95, 47, 130, 131, 65, 166, 117, 183, 95, 47, 164, 190, 18, 175, 130, 131, 189, 89, 144, 55, 236, 80, 117, 199, 189, 89, 83, 80, 189, 89, 178, 122, 150, 251, 224, 173, 150, 251, 36, 81, 95, 47, 198, 46, 150, 251, 56, 216, 65, 166, 225, 157, 236, 80, 198, 46, 18, 175, 84, 72, 236, 80, 56, 216, 189, 89, 178, 122, 18, 175, 56, 200, 95, 47, 224, 173, 18, 175, 178, 122, 189, 89, 16, 149, 95, 47, 224, 173, 189, 89, 104, 4, 189, 89, 124, 123, 236, 80, 56, 216, 18, 175, 178, 122, 65, 166, 224, 173, 65, 166, 144, 55, 1, 5, 104, 4, 65, 166, 56, 216, 150, 251, 9, 209, 236, 80, 117, 199, 150, 251, 205, 225, 236, 80, 16, 165, 150, 251, 164, 190, 65, 166, 84, 72, 1, 5, 104, 4, 150, 251, 185, 106, 236, 80, 117, 199, 18, 175, 16, 165, 18, 175, 77, 132, 95, 47, 164, 190, 189, 89, 104, 4, 18, 175, 83, 80, 150, 251, 252, 29, 236, 80, 225, 157, 95, 47, 191, 46, 236, 80, 164, 174, 95, 47, 198, 46, 65, 166),
"format": 34896613399,
"index_count": 144,
"index_data": PackedByteArray(25, 0, 51, 0, 3, 0, 25, 0, 61, 0, 51, 0, 83, 0, 35, 0, 38, 0, 83, 0, 89, 0, 35, 0, 57, 0, 24, 0, 90, 0, 57, 0, 60, 0, 24, 0, 46, 0, 41, 0, 56, 0, 46, 0, 7, 0, 41, 0, 10, 0, 84, 0, 21, 0, 10, 0, 70, 0, 84, 0, 39, 0, 63, 0, 54, 0, 39, 0, 30, 0, 63, 0, 29, 0, 86, 0, 80, 0, 29, 0, 23, 0, 86, 0, 15, 0, 69, 0, 9, 0, 15, 0, 75, 0, 69, 0, 67, 0, 33, 0, 87, 0, 67, 0, 19, 0, 33, 0, 94, 0, 59, 0, 92, 0, 94, 0, 43, 0, 59, 0, 64, 0, 0, 0, 48, 0, 64, 0, 31, 0, 0, 0, 44, 0, 5, 0, 53, 0, 44, 0, 95, 0, 5, 0, 28, 0, 77, 0, 17, 0, 28, 0, 79, 0, 77, 0, 72, 0, 18, 0, 66, 0, 72, 0, 12, 0, 18, 0, 82, 0, 14, 0, 74, 0, 82, 0, 37, 0, 14, 0, 65, 0, 45, 0, 55, 0, 65, 0, 49, 0, 45, 0, 88, 0, 73, 0, 68, 0, 88, 0, 81, 0, 73, 0, 8, 0, 50, 0, 2, 0, 8, 0, 47, 0, 50, 0, 71, 0, 78, 0, 85, 0, 71, 0, 76, 0, 78, 0, 58, 0, 52, 0, 62, 0, 58, 0, 42, 0, 52, 0, 6, 0, 32, 0, 40, 0, 6, 0, 1, 0, 32, 0, 20, 0, 36, 0, 34, 0, 20, 0, 13, 0, 36, 0, 16, 0, 22, 0, 27, 0, 16, 0, 11, 0, 22, 0, 4, 0, 91, 0, 26, 0, 4, 0, 93, 0, 91, 0),
"material": SubResource("StandardMaterial3D_khh4o"),
"name": "Color_TablaApuestasSimples",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 96,
"vertex_data": PackedByteArray(254, 255, 0, 0, 254, 255, 255, 255, 254, 255, 0, 0, 254, 255, 255, 255, 254, 255, 0, 0, 254, 255, 255, 255, 254, 255, 0, 0, 0, 0, 255, 255, 254, 255, 0, 0, 0, 0, 255, 255, 254, 255, 0, 0, 0, 0, 255, 255, 254, 255, 255, 255, 254, 255, 255, 255, 254, 255, 255, 255, 254, 255, 255, 191, 254, 255, 255, 255, 254, 255, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 254, 255, 255, 255, 0, 0, 255, 255, 254, 255, 255, 255, 0, 0, 255, 255, 254, 255, 255, 191, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 191, 0, 0, 0, 0, 254, 255, 255, 255, 0, 0, 0, 0, 254, 255, 255, 255, 0, 0, 0, 0, 254, 255, 255, 255, 140, 119, 0, 0, 0, 0, 255, 255, 140, 119, 0, 0, 0, 0, 255, 255, 140, 119, 0, 0, 0, 0, 255, 255, 114, 136, 0, 0, 0, 0, 255, 255, 114, 136, 0, 0, 0, 0, 255, 255, 114, 136, 0, 0, 0, 0, 255, 255, 140, 119, 255, 255, 0, 0, 255, 255, 140, 119, 255, 255, 0, 0, 255, 191, 140, 119, 255, 255, 0, 0, 255, 255, 114, 136, 0, 0, 254, 255, 255, 255, 114, 136, 0, 0, 254, 255, 255, 255, 114, 136, 0, 0, 254, 255, 255, 255, 140, 119, 0, 0, 254, 255, 255, 255, 140, 119, 0, 0, 254, 255, 255, 255, 140, 119, 0, 0, 254, 255, 255, 255, 140, 119, 255, 255, 254, 255, 255, 255, 140, 119, 255, 255, 254, 255, 255, 191, 140, 119, 255, 255, 254, 255, 255, 255, 114, 136, 255, 255, 254, 255, 255, 255, 114, 136, 255, 255, 254, 255, 255, 255, 114, 136, 255, 255, 254, 255, 255, 191, 254, 255, 255, 255, 64, 112, 255, 255, 254, 255, 255, 255, 64, 112, 255, 191, 254, 255, 255, 255, 64, 112, 255, 255, 254, 255, 255, 255, 190, 143, 255, 255, 254, 255, 255, 255, 190, 143, 255, 191, 254, 255, 255, 255, 190, 143, 255, 255, 254, 255, 0, 0, 190, 143, 255, 255, 254, 255, 0, 0, 190, 143, 255, 255, 254, 255, 0, 0, 190, 143, 255, 255, 254, 255, 0, 0, 64, 112, 255, 255, 254, 255, 0, 0, 64, 112, 255, 255, 254, 255, 0, 0, 64, 112, 255, 255, 114, 136, 255, 255, 190, 143, 255, 255, 114, 136, 255, 255, 190, 143, 255, 255, 114, 136, 255, 255, 190, 143, 255, 191, 114, 136, 255, 255, 64, 112, 255, 255, 114, 136, 255, 255, 64, 112, 255, 255, 114, 136, 255, 255, 64, 112, 255, 191, 114, 136, 0, 0, 64, 112, 255, 255, 114, 136, 0, 0, 64, 112, 255, 255, 114, 136, 0, 0, 64, 112, 255, 255, 114, 136, 0, 0, 190, 143, 255, 255, 114, 136, 0, 0, 190, 143, 255, 255, 114, 136, 0, 0, 190, 143, 255, 255, 0, 0, 0, 0, 190, 143, 255, 255, 0, 0, 0, 0, 190, 143, 255, 255, 0, 0, 0, 0, 190, 143, 255, 255, 0, 0, 0, 0, 64, 112, 255, 255, 0, 0, 0, 0, 64, 112, 255, 255, 0, 0, 0, 0, 64, 112, 255, 255, 0, 0, 255, 255, 190, 143, 255, 255, 0, 0, 255, 255, 190, 143, 255, 255, 0, 0, 255, 255, 190, 143, 255, 191, 0, 0, 255, 255, 64, 112, 255, 255, 0, 0, 255, 255, 64, 112, 255, 255, 0, 0, 255, 255, 64, 112, 255, 191, 140, 119, 255, 255, 64, 112, 255, 255, 140, 119, 255, 255, 64, 112, 255, 191, 140, 119, 255, 255, 64, 112, 255, 255, 140, 119, 255, 255, 190, 143, 255, 255, 140, 119, 255, 255, 190, 143, 255, 191, 140, 119, 255, 255, 190, 143, 255, 255, 140, 119, 0, 0, 64, 112, 255, 255, 140, 119, 0, 0, 64, 112, 255, 255, 140, 119, 0, 0, 64, 112, 255, 255, 140, 119, 0, 0, 190, 143, 255, 255, 140, 119, 0, 0, 190, 143, 255, 255, 140, 119, 0, 0, 190, 143, 255, 255, 114, 136, 255, 255, 0, 0, 255, 255, 114, 136, 255, 255, 0, 0, 255, 255, 114, 136, 255, 255, 0, 0, 255, 191, 254, 255, 255, 255, 0, 0, 255, 255, 254, 255, 255, 255, 0, 0, 255, 191, 254, 255, 255, 255, 0, 0, 255, 255, 255, 127, 255, 63, 255, 127, 255, 127, 255, 191, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 255, 191, 255, 127, 255, 127, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 63, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 255, 63, 255, 127, 255, 127, 255, 127, 255, 255, 255, 127, 255, 63, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 63, 255, 127, 255, 127, 255, 63, 255, 127, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 255, 191, 255, 127, 255, 63, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 63, 255, 127, 255, 127, 255, 63, 255, 127, 255, 127, 255, 127, 255, 63, 255, 127, 255, 127, 255, 191, 255, 127, 255, 127, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 63, 255, 127, 255, 127, 255, 127, 255, 255, 255, 127, 255, 127, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 255, 191, 255, 127, 255, 127, 255, 63, 255, 127, 255, 127, 255, 191, 255, 127, 255, 63, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 63, 255, 127, 255, 127, 255, 127, 255, 255, 255, 127, 255, 63, 255, 127, 255, 127, 255, 63, 255, 127, 255, 127, 255, 63, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 255, 63, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 255, 63, 255, 127, 255, 127, 255, 63, 255, 127, 255, 127, 255, 63, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 63, 255, 127, 255, 127, 255, 127, 255, 255, 255, 127, 255, 127, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 127, 255, 63, 255, 127, 255, 127, 255, 191, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 255, 191, 255, 127, 255, 63, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_cgtsm")

[node name="BetDisplaySimple" type="Node3D"]
script = ExtResource("1_76y5o")
chipPileScene = ExtResource("2_t13lr")
selectorScene = ExtResource("3_clxdh")
playerPileZ = -5.0

[node name="Slotmachine" parent="." instance=ExtResource("4_vcxxi")]
transform = Transform3D(-4.59722e-08, 3.34008e-08, -1.3, 0.764121, 1.05172, 0, 1.05172, -0.764121, -5.68248e-08, 0, 0.539, 0)
script = ExtResource("3_gj3qo")

[node name="TragaRuedaMid_002" parent="Slotmachine" index="0"]
visible = false

[node name="TragaRuedaIzq_002" parent="Slotmachine" index="1"]
visible = false

[node name="TragaRuedaDer_002" parent="Slotmachine" index="2"]
visible = false

[node name="PalancaBola_001" parent="Slotmachine" index="5"]
transform = Transform3D(0.141891, -0.0177627, 0, 0.0177627, 0.141891, 0, 0, 0, 0.142998, 0.0423171, 0.161243, -1.00902)

[node name="Palanca_002" parent="Slotmachine" index="6"]
transform = Transform3D(0.236732, -2.23423e-07, -0.532201, -0.532201, -2.32632e-08, -0.236732, 6.95489e-08, 0.582477, -2.13593e-07, 0.0423171, 0.161243, -1.00902)

[node name="Pantalla" parent="Slotmachine" index="9"]
surface_material_override/0 = SubResource("ShaderMaterial_ttvtf")

[node name="SlotWheel_0" parent="Slotmachine" instance=ExtResource("5_rxriy")]
transform = Transform3D(-0.123607, 2.28876e-08, 0.380422, 0.380422, -1.66288e-08, 0.123607, 2.28876e-08, 0.4, -1.66288e-08, 0.000114575, 0.656157, 0.47)
imageOnFaces = 1

[node name="SlotWheel_1" parent="Slotmachine" instance=ExtResource("5_rxriy")]
transform = Transform3D(-0.123607, 2.28876e-08, 0.380422, 0.380422, -1.66288e-08, 0.123607, 2.28876e-08, 0.4, -1.66288e-08, 0.000114575, 0.656157, 2.57406e-14)
imageOnFaces = 1

[node name="SlotWheel_2" parent="Slotmachine" instance=ExtResource("5_rxriy")]
transform = Transform3D(-0.123607, 2.28876e-08, 0.380422, 0.380422, -1.66288e-08, 0.123607, 2.28876e-08, 0.4, -1.66288e-08, 0.000114575, 0.656157, -0.47)
imageOnFaces = 1

[node name="ScreenLight" type="OmniLight3D" parent="Slotmachine"]
transform = Transform3D(0.769231, -4.17233e-07, -3.90799e-14, 4.17233e-07, 0.769231, -3.01981e-14, 3.55271e-14, 2.84217e-14, 0.769231, 0.944689, -0.259999, 2.57406e-14)

[node name="ReadyLabel" type="Label3D" parent="Slotmachine"]
transform = Transform3D(-4.37112e-08, -4.76837e-07, 0.999997, -1.19904e-14, 0.999998, 4.17233e-07, -0.999999, 3.73035e-14, -4.37113e-08, 0.199366, 1.27771, 2.57777e-08)
render_priority = 2
outline_render_priority = 1
text = "LISTO"
font = ExtResource("4_6lq8r")

[node name="ScreenViewport" type="SubViewport" parent="Slotmachine"]
size = Vector2i(1024, 1024)

[node name="BetScreen" parent="Slotmachine/ScreenViewport" instance=ExtResource("10_xm5ya")]

[node name="Table" type="Node3D" parent="."]
transform = Transform3D(-8.74228e-08, 0, -2, 0, 2, 0, 2, 0, -8.74228e-08, 0, 0, 0)

[node name="TablaApuestasBorde" type="MeshInstance3D" parent="Table"]
transform = Transform3D(-1, 0, -1.39912e-06, 0, 0.136604, 0, 3.89414e-07, 0, -3.59287, -0.683558, 0.08867, 0)
gi_mode = 2
mesh = SubResource("ArrayMesh_4x4fq")
skeleton = NodePath("")

[node name="TablaApuestasSimples" type="MeshInstance3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 0.0728083, 0, 0, 0, 3.54717, 0, 0, 0)
gi_mode = 2
mesh = SubResource("ArrayMesh_f05kf")
skeleton = NodePath("")

[node name="AIBetController" type="Node" parent="."]
process_mode = 4
script = ExtResource("13_o215p")

[node name="StartDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.498624, 0.866818, 0, -0.866818, 0.498624, 0, 1.28603, 0.481772)
render_priority = 2
outline_render_priority = 1
text = "Apuesta:"
font = ExtResource("4_6lq8r")
font_size = 47

[node name="Label3D2" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.498624, 0.866818, 0, -0.866818, 0.498624, 0, 0.591888, 1.58172)
render_priority = 2
outline_render_priority = 1
text = "Izquierda/derecha para moverse, 'agarre' para apostar"
font = ExtResource("4_6lq8r")
font_size = 47

[editable path="Slotmachine"]
